package domain;

public enum NombreMateria {
    NINGUNA,ALGORITMOS_Y_ESTRUCTURA_DE_DATOS, ALGEBRA,ANALISIS_MATEMATICO, QUIMICA, INGENIERIA_Y_SOCIEDAD, ARQUITECTURA_DE_COMPUTADORAS,MATEMATICA_DISCRETA,
    SISTEMAS_DE_REPRESENTACION,FISICA_I, SISTEMAS_Y_ORGANIZACIONES, ANALISIS_DE_SISTEMAS,ANALISIS_MATEMATICO_II, PROBABILIDAD_Y_ESTADISTICA,
    PARADIGMAS_DE_PROGRAMACION, GESTION_DE_DATOS, DISENO_DE_SISTEMAS, SISTEMAS_OPERATIVOS, MATEMATICA_SUPERIOR,INGLES_I,FISICA_II,
    ADMNISTRACION_DE_RECURSOS, INVESTIGACION_OPERATIVA, INGENIERIA_DE_SOFTWARE, LEGISLACION, COMUNICACIONES, REDES_DE_INFORMACION,TEORIA_DE_CONTROL,
    INTELIGENCIA_ARTIFICIAL,PROYECTO_FINAL,ADMINISTRACION_GERENCIAL,SISTEMAS_DE_GESTION
}
